--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,17 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+
+.endcard {
+  color: rgb(var(--foreground-rgb));
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
